# Experimental-Assistant

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  agent_registry.md  index.html  p0_spec_mapping_v0_1.md  pyproject.toml  skills-lock.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: literature-v0.9.8.yml  literature-v0.9.9.yml
benchmarks/literature-universal-v1/: README.md  expected.yml  schema.yml
benchmarks/raman-v1/: benchmark.yml  scientific-review.yml
demo/: index.html  styles.css
docs/: CAPABILITY_MATRIX.md  EA_LOCAL_LITERATURE_LIBRARY_SKILL.md  EA_PROJECT_DESIGN.md  EA_PUBLIC_RELEASE_INITIALIZATION.md  EA_REPORT_AND_FIGURE_STANDARD.md  EA_SKILL_MODULE_ARCHITECTURE.md  EA_V0_2_CONFIRMATION_CHECKLIST.md  EA_V0_2_WORK_PLAN.md  ERROR_CATALOG.md  LITERATURE_ACQUISITION_HANDOFF.md  PRE_V1_COMPATIBILITY_SKILL_REMOVAL.md  PROJECT_BUNDLE_VERIFICATION.md  PUBLIC_ACCEPTANCE_MATRIX.md  PUBLIC_INSTALL_AND_CODEX_SKILL_SETUP.md  PUBLIC_ONBOARDING.md  QUICKSTART_ZH.md  RAMAN_BENCHMARK_WALKTHROUGH.md  README.md  RELEASE_SECURITY_POLICY.md  RELEASE_VERIFICATION.md  SUPPORT_POLICY.md  V0_9_7_ISSUE_DISPOSITION.md  V0_9_7_TRIAL_REPORT.md  V0_9_8_ISSUE_DISPOSITION.md  V0_9_8_ISSUE_DISPOSITION.yml  V0_9_8_TRIAL_REPORT.md  V0_9_9_ACCEPTANCE_MAPPING.md  V0_9_9_ISSUE_DISPOSITION.md  V0_9_9_ISSUE_DISPOSITION.yml  V0_9_9_RELEASE_NOTES.md  V0_9_9_TRIAL_REPORT.md  V0_9_AGENT_HANDOFF.md  V0_9_KNOWN_LIMITATIONS.md  V0_9_MANUAL_TEST_CHECKLIST.md  V0_9_RELEASE_NOTES.md  V1_0_ISSUE_DISPOSITION.md  V1_0_ISSUE_DISPOSITION.yml  V1_0_KNOWN_LIMITATIONS.md  V1_0_PUBLICATION_VERIFICATION.md  V1_0_PUBLICATION_VERIFICATION.yml  (+20 more)
docs/adr/: 0001-v0.9.9-universal-literature-data-and-report-contract.md
docs/simulated-evidence/: README.md  manual-artifact-review.yml  mock-companion-validation.yml  persona-scenarios.yml  scientific-reviews.yml
examples/public-ftir-assignment-project/: EA_PROJECT.md  PROJECT_RULE_CARD.md  README.md  example_manifest.yml
examples/public-raman-project/: EA_PROJECT.md  PROJECT_RULE_CARD.md  README.md  example_manifest.yml
examples/public-uv-vis-project/: EA_PROJECT.md  PROJECT_RULE_CARD.md  README.md  example_manifest.yml
examples/public-xps-be-project/: EA_PROJECT.md  PROJECT_RULE_CARD.md  README.md  example_manifest.yml
examples/test1-mos2-demo/: DATA-NOTICE.md  OPERATOR_GUIDE_ZH.md  README.md  checksums.sha256
requirements/: minimum.txt  release.txt
schemas/: literature-acquisition-handoff.schema.json  literature-data-schema-v2.schema.json
scripts/: build_distribution_checklist.py  build_packaged_example_project.py  build_public_ftir_assignment_example_project.py  build_public_uv_vis_example_project.py  build_public_xps_be_example_project.py  build_release_manifest.py  build_release_package.py  check_docs_links.py  check_downloaded_skill_instructions.py  check_install_env.py  check_version_identity.py  generate_release_keypair.py  public_release_smoke.py  run_scientific_benchmarks.py  sign_release_package.py  validate_skill_packages.py  verify_release_package.py  verify_release_signature.py
skill-registry/: companion-compatibility.yml  index.yml
skill-registry/builtins/: electrochemistry-analysis.yml  ftir-analysis.yml  image-analysis.yml  local-literature-library.yml  pl-analysis.yml  project-traceability.yml  raman-analysis.yml  scientific-figure.yml  thermal-analysis.yml  uv-vis-analysis.yml  xps-analysis.yml  xrd-analysis.yml
skills/ea/: SKILL.md
skills/ea-v0-2/: SKILL.md
src/ea/: __init__.py  cli.py  command_effects.py  companion.py  diagnostics.py  drafts.py  errors.py  estimates.py  identity.py  install_experience.py  project_state.py  release_artifacts.py  release_distribution.py  release_manifest.py  release_package.py  release_reproducibility.py  release_signature.py  release_skill_bundle.py  release_smoke.py  release_supply_chain.py  report_messages.py  scientific_benchmarks.py  (+1 more)
tests/: test_add_skills.py  test_agent_brief.py  test_batch_workflow.py  test_companion_compatibility.py  test_composite_report.py  test_data_import.py  test_diagnostics.py  test_docs_links.py  test_draft_promotion.py  test_electrochemistry_workflow.py  test_evaluation_workflow.py  test_export_workflow.py  test_figure_delivery.py  test_figure_style.py  test_ftir_workflow.py  test_healthcheck.py  test_image_data_workflow.py  test_install_experience.py  test_interaction_modes.py  test_literature_benchmark.py  test_literature_data_extraction.py  test_literature_pipeline.py  test_literature_workflow.py  test_material_assignments.py  test_output_budgets.py  test_packaged_examples.py  test_pl_workflow.py  test_project_bundle_verification_docs.py  test_project_cli_workflow.py  test_project_migrations.py  test_public_onboarding.py  test_raman_preprocessing.py  test_references_workflow.py  test_release_artifacts.py  test_release_distribution.py  test_release_manifest.py  test_release_package.py  test_release_signature.py  test_release_skill_bundle.py  test_release_smoke.py  (+27 more)
工作指南/: README.md
(+324 files in other folders)
