[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ea-v0-2"
version = "0.2.0"
description = "Modular local-first Experimental Assistant core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
ea = "ea.cli:main"
ea-public-release-smoke = "ea.release_smoke:main"
ea-release-manifest = "ea.release_manifest:main"
ea-release-package = "ea.release_package:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ea.materials" = ["*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
